--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -95,8 +95,10 @@
           %p Loomio is being built by a core team in Wellington, New Zealand, and a wider network of friends and supporters all over the world. This video is a presentation by one of the team members that explains some of the background of the project.
         .span6
           <iframe src="https://player.vimeo.com/video/53696972?title=0&amp;byline=0&amp;portrait=0" width="426" height="239" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-      .divider
-      .row-fluid
+  .container
+  %section
+    .inner-container
+      .row-fluid#contact-us
         .span6
           =image_tag("retreat-photo.jpg")
         .span6
