--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -122,6 +122,8 @@ a.btn-icon:hover { color: $dark-grey; }
 .pages.about_us, .woc.index, .we_the_people.index {
   color: black;
 
+  .alert { margin: 10px 0; }
+
   .pages-information { min-height: 200px; }
 
   .pages-links {
@@ -294,6 +296,7 @@ a.btn-icon:hover { color: $dark-grey; }
 body.pages { margin-bottom: 34px; }
 
 body.pages.home {
+  .alert { margin: 10px 0; }
   #button-container {
     margin-top: 24px;
     a { width: 200px; }
