change placeholders on group request form

--- a/app/views/group_requests/pwyc.html.haml
+++ b/app/views/group_requests/pwyc.html.haml
@@ -4,8 +4,7 @@
       %h1= t("group_request.pwyc.intro")
 .row
   .span5.offset1
-    = render 'form', submit_label: t("group_request.pwyc.submit")
-
+    = render 'form', submit_label: t("group_request.pwyc.submit"), placeholder: t("group_request.pwyc.placeholder")
   .span4
     .info-box#informal-group
       %h2= t("group_request.pwyc.header")
