--- a/app/views/group_requests/subscription.html.haml
+++ b/app/views/group_requests/subscription.html.haml
@@ -4,7 +4,7 @@
       %h1= t("group_request.subscription.intro")
 .row
   .span5.offset1
-    = render 'form', submit_label: t("group_request.subscription.submit")
+    = render 'form', submit_label: t("group_request.subscription.submit"), placeholder: t("group_request.subscription.placeholder")
   .span5
     .info-box#organisation
       = render 'groups/subscriptions/pricing_table'
