--- a/app/views/group_requests/_form.html.haml
+++ b/app/views/group_requests/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for @group_request do |f|
-  = f.input :admin_name, label: t("group_request.form.name"), placeholder: t("group_request.form.placeholders.name")
-  = f.input :admin_email, label: t("group_request.form.email"), placeholder: t("group_request.form.placeholders.email")
-  = f.input :name, label: t("group_request.form.group_name"), placeholder: t("group_request.form.placeholders.group_name")
+  = f.input :admin_name, label: t("group_request.form.name")
+  = f.input :admin_email, label: t("group_request.form.email")
+  = f.input :name, label: t("group_request.form.group_name"), placeholder: placeholder
   = f.input :paying_subscription, as: :hidden
   = f.submit submit_label, class: 'btn btn-info btn-large', :data => { :disable_with => submit_label }, id: 'sign-up-submit'
