--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -331,3 +331,5 @@ a.btn-icon:hover { color: $dark-grey; }
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
 }
+
+.nowrap { white-space: nowrap; }
