--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -344,3 +344,20 @@ a.btn-icon:hover { color: $dark-grey; }
 }
 
 .nowrap { white-space: nowrap; }
+
+// fix for pie canvas until style-guide 
+
+body.dashboard.show, body.groups.show {
+  .icon.shim {  
+
+    .activity-count { 
+      bottom: 0;
+      top: 6px;
+      left: 22px;
+    }
+    .motion-sparkline { 
+      margin-top: -5px;
+    }
+  }
+}
+
