--- a/app/views/groups/_membership.html.haml
+++ b/app/views/groups/_membership.html.haml
@@ -1,6 +1,3 @@
 -cache user do
   %li{:id => user.id}
-    = render 'avatar', user: user, size: "small", kind: nil, id: nil
-    .user-name
-      %span.membership-user-name
-        = link_to user.name, user_path(user), class: 'user-name'
+    = link_to (render 'avatar', user: user, size: "small", kind: nil, id: nil), user_path(user), title: user.name
