--- a/app/assets/stylesheets/memberships.css.scss
+++ b/app/assets/stylesheets/memberships.css.scss
@@ -1,22 +1,10 @@
 ul#users-list {
   li {
     height: 25px;
-    margin-bottom: 5px;
-
-    img { float: left; }
-
-    .membership-user-name {
-      margin-left: 2px;
-      a {
-        text-decoration: none;
-        &:hover { text-decoration: underline; }
-      }
-    }
-    .user-name {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      width: 165px;
-    }
+    margin-bottom: 4px;
+    float: left;
+  }
+  .avatar-canvas {
+    margin-right: 2px;
   }
 }
