--- a/app/views/discussions/_discussion_preview.html.haml
+++ b/app/views/discussions/_discussion_preview.html.haml
@@ -9,6 +9,7 @@
       .discussion-title
         = truncate(discussion.title, :length => 60, :separator => ' ')
         .group-name= DiscussionDecorator.new(discussion).display_group_name(this_group)
+      = render '/discussions/mini_pie', current_motion: current_motion
       .large-icon.discussion-icon.activity-icon{ class: enabled_icon_class_for(discussion, current_user) }
         - discussion_activity = discussion_activity_count_for(discussion, current_user)
         - if discussion_activity > 0
@@ -20,18 +21,3 @@
             .proposal-close-date= "#{time_ago_in_words(current_motion.closing_at)} until close"
         - else
           .latest-comment-time= "#{t('ago', :quantity_of_time => time_ago_in_words(discussion.last_comment_at))}"
-    - if current_motion
-      - motion_activity = motion_activity_count_for(current_motion, current_user)
-      .icon.shim{:id => "graph_#{current_motion.id}"}
-        - if current_motion.voting? && motion_activity > 0
-          %span.activity-count.label.label-info
-            = motion_activity
-
-        .motion-sparkline
-          -values = current_motion.vote_counts.values
-          -if values.sum == 0
-            0,0,0,0,1
-          -else
-            =values.join(',')
-    - else
-      .large-icon.pie-icon.activity-icon
