--- a/app/assets/stylesheets/inbox.css.scss
+++ b/app/assets/stylesheets/inbox.css.scss
@@ -31,18 +31,18 @@ ul.inbox-list{
       color: #fff;
       top: 0.2em;
       left: 0.3em;
-      background: #999;
+      background: #75A0CF;
       border-radius: 0.2em;
       position: relative;
       &:before {
-        position:absolute;  
+        position:absolute;
         content: "";
         bottom: -0.3em;
         right: 0.4em;
         width:0em;
         height:0em;
         border-bottom:0.4em solid transparent;
-        border-left:0.4em solid #999;
+        border-left:0.4em solid #75A0CF;
       }
     }
     .icon {
