--- a/app/views/inbox/_discussion_line_item.html.haml
+++ b/app/views/inbox/_discussion_line_item.html.haml
@@ -2,7 +2,7 @@
   = link_to item do
     .span1
       .icon.discussion-icon
-        .activity-count{title: 'Unread comments'}
+        .activity-count.label.label-info{title: 'Unread comments'}
           =item.as_read_by(current_user).unread_comments_count
 
     .span9.title
