--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,4 @@
         = yield
       = render 'footer_logged_in'
 
-    = render 'application/analytics'
+    / = render 'application/analytics'
