--- a/app/views/inbox/_motion_line_item.html.haml
+++ b/app/views/inbox/_motion_line_item.html.haml
@@ -5,7 +5,9 @@
         -values = item.vote_counts.values
         .activity-container
           %span.count.unread-votes-count
-            5
+            - count = item.as_read_by(current_user).unread_activity_count
+            - if count != 0
+              =count
         .motion-sparkline
           -if values.sum == 0
             0,0,0,0,1
