--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -50,6 +50,10 @@
     background-image:url('/assets/heart-small.png');
     margin: 1px 0 0 0;
   }
+  &.inbox-icon {
+    background-image:url('/assets/inbox-icon-24x22.png');
+    margin: 2px 0 0 0px;
+  }
   &.notification-icon {
     background-image:url('/assets/notification-24.png');
     margin: 0;
