--- a/app/assets/stylesheets/inbox.css.scss
+++ b/app/assets/stylesheets/inbox.css.scss
@@ -120,3 +120,12 @@ ul.inbox-list{
   }
 }
 
+.navbar {
+  #inbox-count {
+    position: absolute;
+    left: 20px;
+    bottom: 17px;
+    padding: 0px 3px;
+    font-size: $font-tinywiny;
+  }
+}
