--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -52,7 +52,7 @@
   }
   &.inbox-icon {
     /*background-image:url('/assets/inbox-icon-24x22.png');*/
-    background-image:url('/assets/inbox-empty-22.png');
+    background-image:url('/assets/inbox-nav-icon.png');
     margin: 2px 0 0 0px;
   }
   &.notification-icon {
