improved coverage and caught exceptions

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,5 +18,4 @@
       .page-container
         = yield
       = render 'footer_logged_in'
-
-    / = render 'application/analytics'
+      = render 'application/analytics'
