--- a/app/views/application/_analytics.html.haml
+++ b/app/views/application/_analytics.html.haml
@@ -1,4 +1,5 @@
--#- if Rails.env.production? || Rails.env.staging?
--#- unless controller_name == 'Searches'
+/ -# if Rails.env.production? || Rails.env.staging?
+/ 	-# unless controller_name == 'Searches'
 = render 'google_analytics'
 = render 'segmentio'
+
