--- a/app/assets/stylesheets/frontpage.css
+++ b/app/assets/stylesheets/frontpage.css
@@ -1,7 +1,3 @@
 /*
- *= require main
- *= require pages
- *= require invitations
- *= require contributions
- *= require help
+ *= require atomic
 */
