--- a/app/views/groups/_title.html.haml
+++ b/app/views/groups/_title.html.haml
@@ -1,13 +1,17 @@
-.group-title
-  .row
-    - if group
-      .span10
-        %h1.home-title
-          = link_to t(:home), "/"
-          = content_tag :span, "\u25B6", class: 'name-separator'
-          = group.fancy_link
-        = render 'groups/privacy_dropdown', :group => group
-    - else
-      .span10
-        %h1.home-title
-          = link_to t(:home), "/"
+- cache group, group.parent do
+  .group-title
+    .row
+      - if group
+        .span10
+          %h1.home-title
+            = link_to t(:home), "/"
+            = content_tag :span, "\u25B6", class: 'name-separator'
+            - if group.is_a_subgroup?
+              = link_to group.parent.name, group.parent
+              = content_tag :span, "\u25B6", class: 'name-separator'
+            = link_to group.name, group
+          = render 'groups/privacy_dropdown', :group => group
+      - else
+        .span10
+          %h1.home-title
+            = link_to t(:home), "/"
