--- a/app/views/application/_analytics.html.haml
+++ b/app/views/application/_analytics.html.haml
@@ -1,5 +1,5 @@
-/ -# if Rails.env.production? || Rails.env.staging?
-/ 	-# unless controller_name == 'Searches'
-= render 'google_analytics'
-= render 'segmentio'
+- if Rails.env.production? || Rails.env.staging?
+ 	- unless controller_name == 'Searches'
+	= render 'google_analytics'
+	= render 'segmentio'
 
