--- a/app/views/application/_segmentio.html.haml
+++ b/app/views/application/_segmentio.html.haml
@@ -1,4 +1,4 @@
-= hidden_field_tag 'segment_data', @segmentio.to_json, {id: 'segmentio'}
+= hidden_field_tag 'segment_data', segmentio.to_json, {id: 'segmentio'}
 :javascript
   var analytics=analytics||[];(function(){var e=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group"],t=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var n=0;n<e.length;n++)analytics[e[n]]=t(e[n])})(),analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)};
   analytics.load("mm2qb7vzfr"); 
