--- a/app/views/discussions/_options.html.haml
+++ b/app/views/discussions/_options.html.haml
@@ -1,4 +1,6 @@
 .dropdown#discussion-options
+  %a{href: ":id/show_print"}
+    %i.icon-print
   = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
   %ul.dropdown-menu.pull-right
     - if can?(:edit_title, discussion)
