--- a/app/views/discussions/_options.html.haml
+++ b/app/views/discussions/_options.html.haml
@@ -1,5 +1,5 @@
 .dropdown#discussion-options
-  %a{href: ":id/show_print"}
+  %a{href: show_print_discussion_path(discussion)}
     %i.icon-print
   = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
   %ul.dropdown-menu.pull-right
