--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -6,7 +6,7 @@
     .activity-item-text-container
       .activity-item-comment-actor
         =link_to comment.user_name, user_path(comment.user), class: "user-name"
-      .activity-item-header~ add_mention_links(render_rich_text(comment.body.to_s.force_encoding("UTF-8"), comment.uses_markdown?)).html_safe
+      .activity-item-header.markdown-styles~ add_mention_links(render_rich_text(comment.body.to_s.force_encoding("UTF-8"), comment.uses_markdown?)).html_safe
 
     -if comment.attachments_count > 0
       -comment.attachments.each do |a|
