--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -347,7 +347,7 @@ body.discussions.show {
 /* Markdown styling */
 
 .activity-item-body .popover h3 { padding: 8px 14px; }
-.activity-item-body, .long-description, .motion .description, .markdown-styles {
+.activity-item-body, .long-description, .motion .description, .markdown {
   p {
     word-wrap: break-word;
     line-height: 18px;
