--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -1,22 +1,22 @@
-= form_tag add_comment_discussion_path(discussion), :remote => false, id: "new-comment-form" do
-  = hidden_field_tag 'uses_markdown', @uses_markdown, {id: 'global-uses-markdown'}
-  = render 'avatar', user: current_user, size: "medium", kind: nil, id: nil
-  #comment-form-container
-    = text_area_tag 'comment', "", id: 'wmd-input', placeholder: t(:comment_form_placeholder)
-    #wmd-button-bar.hide
-    #attachment-container
-    #comment-toolbar
-      = submit_tag t(:comment_form_submit_button), class: "btn btn-success submit", id: 'post-new-comment', :data => {:disable_with => t(:comment_form_submit_button)}
-      %a.btn{id: 'preview-comment'}= "Preview"
-      .pull-right
-        -unless browser.ie? && browser.version.to_i < 10
-          %a.btn#add-attachment-icon
-            .attachment-icon
-        %a.btn#comment-formatting
-          %i.icon-font
-    #wmd-preview.hide.markdown-styles
-    #wmd-help.hide.modal
-      = render 'application/markdown_help'
+- if can? :add_comment, discussion
+  = form_tag add_comment_discussion_path(discussion), :remote => true, id: "new-comment-form" do
+    = render 'avatar', user: current_user, size: "medium", kind: nil, id: nil
+    #comment-form-container
+      = text_area_tag 'comment', "", id: 'wmd-input', placeholder: t(:comment_form_placeholder)
+      #wmd-button-bar.hide
+      #attachment-container
+      #comment-toolbar
+        = submit_tag t(:comment_form_submit_button), class: "btn btn-success submit", id: 'post-new-comment', :data => {:disable_with => t(:comment_form_submit_button)}
+        %a.btn{id: 'preview-comment'}= "Preview"
+        .pull-right
+          -unless browser.ie? && browser.version.to_i < 10
+            %a.btn#add-attachment-icon
+              .attachment-icon
+          %a.btn#comment-formatting
+            %i.icon-font
+      #wmd-preview.hide.markdown
+      #wmd-help.hide.modal
+        = render 'application/markdown_help'
 
 
 -unless browser.ie? && browser.version.to_i < 10
@@ -40,33 +40,3 @@
 
   %script#template-upload--comment-input{type: "text/x-tmpl"}
     %input{type: 'hidden', name: "attachments[]", value: '{%=o.id%}', data: { 'attachment-id' => "{%=o.id%}" }}
-
-
-
-
-
-
-
-
-/ - if can? :add_comment, discussion
-/   = form_tag add_comment_discussion_path(discussion), :remote => true, id: "new-comment-form" do
-/     = render 'avatar', user: current_user, size: "medium", kind: nil, id: nil
-/     #comment-input{ data: {group: @group.id} }
-/     #comment-form-container
-/       = text_area_tag 'comment', "", id: 'wmd-input', placeholder: t(:comment_form_placeholder)
-/       #attachment-container
-/       #wmd-button-bar.hidden
-/       #comment-toolbar
-/         = submit_tag t(:comment_form_submit_button), class: "btn btn-success submit", id: 'post-new-comment', :data => {:disable_with => t(:comment_form_submit_button)}
-/         %a.btn{id: 'preview-comment'}= "Preview"
-/         .pull-right
-/           -unless browser.ie? && browser.version.to_i < 10
-/             %a.btn#add-attachment-icon
-/               .attachment-icon
-/           %a.btn#comment-formatting
-/             %i.icon-font
-
-/       #wmd-preview.hidden
-/       #wmd-help.hidden
-/         THIS IS HELPFUL EH
-
