--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,15 +1,13 @@
 !!!
 %html
   %head
+    %meta{content: "IE=Edge", "http-equiv" => "X-UA-Compatible"}/
     %title= display_title @unviewed_notifications
     <!--[if lt IE 9]><script type="text/javascript" src="/assets/lib/excanvas.js"></script><![endif]-->
     = stylesheet_link_tag    "application"
-    = browserid_js_tag
+    = javascript_include_tag "https://login.persona.org/include.js"
     = javascript_include_tag "application"
     = csrf_meta_tags
-    %link{:href => "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/themes/flick/jquery-ui.css", :rel => "stylesheet", :type => "text/css"}
-
-    -# Rob took this out because it looked really incomplete and has failing specs
     = render 'social_metadata', :description => @meta_description, :title => @meta_title
 
   %body{class: "#{controller_name} #{action_name}"}
@@ -25,4 +23,3 @@
       = render 'google_analytics'
       / = render 'metrics_listener_data'
       / = javascript_include_tag 'load_metrics_listener'
-      /= piwik_tracking_tag # Disabling piwik until we've moved it over to our own server
