--- a/app/views/discussions/show.html.haml
+++ b/app/views/discussions/show.html.haml
@@ -50,3 +50,5 @@
                         %li.selector-item= render closed_motion, this_group: @group
                       - else
                         %li.selector-item= render '/motions/motion_preview', motion: closed_motion, this_group: @group
+
+= render 'application/markdown_help'
