--- a/app/views/discussions/_form.html.haml
+++ b/app/views/discussions/_form.html.haml
@@ -9,11 +9,13 @@
         - else
           = f.input :group_id, :as => :hidden
       = f.input :title, autofocus: true
-      = f.input :description
-      = f.hidden_field 'uses_markdown', value: @uses_markdown, id: 'global-uses-markdown'
-      = f.submit :class => "btn btn-large btn-info", id: "discussion-submit", :data => {:disable_with => t("helpers.submit.discussion.create")}
-      .dropdown#discussion-markdown-dropdown.global-markdown-setting
-        %a.dropdown-toggle{href:'#discussion-markdown-dropdown', id:'discussion-markdown-dropdown-link', 'data-toggle'=> 'dropdown'}
-          = markdown_img(@uses_markdown)
-        = render 'markdown_setting', target: current_user
-      = render 'application/hint', text: t(:"hint.discussion"), anchor: 'starting-an-engaging-discussion'
+      = f.input :description,  input_html: { id: "wmd-input-new-discussion" }
+      #wmd-button-bar-new-discussion.wmd-button-bar
+      = f.submit :class => "btn btn-success", id: "discussion-submit", :data => {:disable_with => t("helpers.submit.discussion.create")}
+      %a.btn{id: 'preview-new-discussion'}= "Preview"
+      %h2#preview-title.hide
+      #wmd-preview-new-discussion.hide.markdown
+
+    = render 'application/hint', text: t(:"hint.discussion"), anchor: 'starting-an-engaging-discussion'
+
+= render 'application/markdown_help'
