--- a/app/views/groups/_description.html.haml
+++ b/app/views/groups/_description.html.haml
@@ -3,10 +3,10 @@
   - description_markdown_setting ||= false
   .description-container
     .description-body
-      .long-description
-        ~ render_rich_text(group.description, description_markdown_setting)
-      - if can? :edit_description, group
-        = link_to t(:edit_group_description), "#", class: "edit-description bottom-panel-link", id: 'edit_description'
+      .js-render-as-markdown.markdown
+        = preserve group.description
+    - if can? :edit_description, group
+      = link_to t(:edit_group_description), "#", class: "edit-description bottom-panel-link", id: 'edit_description'
 
     - if can? :edit_description, group
       = form_tag send("edit_description_group_path", group), :id => "description-edit-form", :class => "hidden", :remote => true do |f|
