--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -2,7 +2,8 @@
   = form_tag add_comment_discussion_path(discussion), :remote => true, id: "new-comment-form" do
     = render 'avatar', user: current_user, size: "medium", kind: nil, id: nil
     #comment-form-container
-      = text_area_tag 'comment', "", id: 'wmd-input-comment', placeholder: t(:comment_form_placeholder)
+      #comment-input{ data: {group: @group.id} }
+        = text_area_tag 'comment', "", id: 'wmd-input-comment', placeholder: t(:comment_form_placeholder)
       #wmd-button-bar-comment.wmd-button-bar.hide
       #attachment-container
       #comment-toolbar
